// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MetaDescriptor /> check how renders should render with title and description 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    Test title
  </title>
  <meta
    content="Test description"
    name="description"
  />
</HelmetWrapper>
`;

exports[`<MetaDescriptor /> check how renders should render with title only 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    Test title
  </title>
</HelmetWrapper>
`;
